--- a/scan.html
+++ b/scan.html
@@ -2,26 +2,63 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Scanner Ticket Restaurant</title>
   <script src="https://unpkg.com/@zxing/library@latest"></script>
   <style>
-    body { font-family: sans-serif; text-align: center; margin: 20px; }
-    video { width: 100%; max-width: 400px; border: 2px solid #ccc; border-radius: 10px; }
-    #result { margin-top: 20px; font-size: 1.2em; font-weight: bold; }
+    body { 
+      margin: 0; 
+      font-family: sans-serif; 
+      background: black; 
+      color: white; 
+      text-align: center; 
+    }
+    #container {
+      position: relative; 
+      width: 100vw; 
+      height: 100vh; 
+      overflow: hidden;
+    }
+    video {
+      width: 100%; 
+      height: 100%; 
+      object-fit: cover;
+    }
+    /* Cadre rouge */
+    #overlay {
+      position: absolute;
+      top: 50%; left: 50%;
+      width: 80%; height: 150px;
+      transform: translate(-50%, -50%);
+      border: 3px solid red;
+      border-radius: 8px;
+      box-sizing: border-box;
+    }
+    #result {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.6);
+      padding: 10px 15px;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
   </style>
 </head>
 <body>
-  <h2>Scanner Ticket Restaurant</h2>
-  <video id="video" autoplay></video>
-  <div id="result">Scannez un code...</div>
+  <div id="container">
+    <video id="video" autoplay playsinline></video>
+    <div id="overlay"></div>
+    <div id="result">Scannez un ticket...</div>
+  </div>
 
   <script>
     const codeReader = new ZXing.BrowserMultiFormatReader();
     const videoElement = document.getElementById('video');
     const resultElement = document.getElementById('result');
 
-    // Table émetteurs
+    // Table émetteurs connus
     const EMETTEURS = {
       "25": "Edenred",
       "15": "UpDéjeuner",
@@ -29,42 +66,57 @@
       "35": "Natixis (Apétiz)"
     };
 
+    // Fonction de décodage
     function decodeTicket(barcode) {
-      // Exemple : 010002530000
       const partieB = barcode.match(/<(\d{12})</);
       if (!partieB) return null;
-
       const b = partieB[1];
-      const montant = parseInt(b.substring(0, 4), 10) / 100; // ex 1000 -> 10,00 €
+      const montant = parseInt(b.substring(0, 4), 10) / 100;
       const emetteurCode = b.substring(4, 6);
       const emetteur = EMETTEURS[emetteurCode] || "Inconnu";
-
       return { montant, emetteur, brut: barcode };
+    }
+
+    // Bip sonore
+    function beep() {
+      const ctx = new (window.AudioContext || window.webkitAudioContext)();
+      const osc = ctx.createOscillator();
+      osc.type = "sine";
+      osc.frequency.value = 1000;
+      osc.connect(ctx.destination);
+      osc.start();
+      setTimeout(() => osc.stop(), 150);
     }
 
     async function startScanner() {
       try {
         const devices = await codeReader.listVideoInputDevices();
-        const selectedDeviceId = devices[0].deviceId;
+        // Cherche une caméra arrière
+        const backCam = devices.find(d => d.label.toLowerCase().includes("back")) || devices[0];
+        const selectedDeviceId = backCam.deviceId;
 
         codeReader.decodeFromVideoDevice(selectedDeviceId, videoElement, (result, err) => {
           if (result) {
             const decoded = decodeTicket(result.text);
             if (decoded) {
+              beep();
               resultElement.innerHTML = `
-                ✅ Ticket reconnu<br>
-                Émetteur : ${decoded.emetteur}<br>
-                Montant : ${decoded.montant.toFixed(2)} €<br>
-                <small>Code brut : ${decoded.brut}</small>
+                ✅ ${decoded.emetteur} - ${decoded.montant.toFixed(2)} €
               `;
+
+              // Redirection automatique vers Glide avec les données
+              setTimeout(() => {
+                const url = `https://app.glideapps.com/?montant=${decoded.montant}&emetteur=${encodeURIComponent(decoded.emetteur)}`;
+                window.location.href = url;
+              }, 1200);
             } else {
-              resultElement.textContent = "Format de ticket invalide";
+              resultElement.textContent = "❌ Ticket invalide";
             }
           }
         });
       } catch (err) {
         console.error(err);
-        resultElement.textContent = "Erreur d'accès à la caméra";
+        resultElement.textContent = "Erreur accès caméra";
       }
     }
 
