--- a/scan.html
+++ b/scan.html
@@ -2,122 +2,93 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Scanner Ticket Restaurant</title>
+  <title>Scan Ticket Restaurant</title>
   <script src="https://unpkg.com/@zxing/library@latest"></script>
   <style>
-    body { 
-      margin: 0; 
-      font-family: sans-serif; 
-      background: black; 
-      color: white; 
-      text-align: center; 
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #000;
     }
-    #container {
-      position: relative; 
-      width: 100vw; 
-      height: 100vh; 
-      overflow: hidden;
-    }
-    video {
-      width: 100%; 
-      height: 100%; 
+    #video {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
-    /* Cadre rouge */
-    #overlay {
+    #frame {
       position: absolute;
-      top: 50%; left: 50%;
-      width: 80%; height: 150px;
-      transform: translate(-50%, -50%);
       border: 3px solid red;
-      border-radius: 8px;
+      width: 60%;
+      height: 20%;
+      top: 40%;
+      left: 20%;
       box-sizing: border-box;
-    }
-    #result {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,0.6);
-      padding: 10px 15px;
-      border-radius: 6px;
-      font-size: 1rem;
     }
   </style>
 </head>
 <body>
-  <div id="container">
-    <video id="video" autoplay playsinline></video>
-    <div id="overlay"></div>
-    <div id="result">Scannez un ticket...</div>
-  </div>
+  <video id="video" autoplay></video>
+  <div id="frame"></div>
+  <audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
 
   <script>
     const codeReader = new ZXing.BrowserMultiFormatReader();
-    const videoElement = document.getElementById('video');
-    const resultElement = document.getElementById('result');
-
-    // Table émetteurs connus
-    const EMETTEURS = {
-      "25": "Edenred",
-      "15": "UpDéjeuner",
-      "45": "Pluxee",
-      "35": "Natixis (Apétiz)"
-    };
-
-    // Fonction de décodage
-    function decodeTicket(barcode) {
-      const partieB = barcode.match(/<(\d{12})</);
-      if (!partieB) return null;
-      const b = partieB[1];
-      const montant = parseInt(b.substring(0, 4), 10) / 100;
-      const emetteurCode = b.substring(4, 6);
-      const emetteur = EMETTEURS[emetteurCode] || "Inconnu";
-      return { montant, emetteur, brut: barcode };
-    }
-
-    // Bip sonore
-    function beep() {
-      const ctx = new (window.AudioContext || window.webkitAudioContext)();
-      const osc = ctx.createOscillator();
-      osc.type = "sine";
-      osc.frequency.value = 1000;
-      osc.connect(ctx.destination);
-      osc.start();
-      setTimeout(() => osc.stop(), 150);
-    }
+    const video = document.getElementById('video');
+    const beep = document.getElementById('beep');
 
     async function startScanner() {
       try {
-        const devices = await codeReader.listVideoInputDevices();
-        // Cherche une caméra arrière
-        const backCam = devices.find(d => d.label.toLowerCase().includes("back")) || devices[0];
-        const selectedDeviceId = backCam.deviceId;
+        const constraints = {
+          video: {
+            facingMode: { exact: "environment" } // force caméra arrière
+          }
+        };
 
-        codeReader.decodeFromVideoDevice(selectedDeviceId, videoElement, (result, err) => {
+        const stream = await navigator.mediaDevices.getUserMedia(constraints);
+        video.srcObject = stream;
+
+        codeReader.decodeFromVideoDevice(null, 'video', (result, err) => {
           if (result) {
-            const decoded = decodeTicket(result.text);
-            if (decoded) {
-              beep();
-              resultElement.innerHTML = `
-                ✅ ${decoded.emetteur} - ${decoded.montant.toFixed(2)} €
-              `;
+            beep.play();
 
-              // Redirection automatique vers Glide avec les données
-              setTimeout(() => {
-                const url = `https://app.glideapps.com/?montant=${decoded.montant}&emetteur=${encodeURIComponent(decoded.emetteur)}`;
-                window.location.href = url;
-              }, 1200);
-            } else {
-              resultElement.textContent = "❌ Ticket invalide";
-            }
+            const raw = result.getText();
+            const info = decodeTicket(raw);
+
+            alert(`Émetteur: ${info.emetteur}\nMontant: ${info.montant} €`);
+
+            stream.getTracks().forEach(track => track.stop());
+            window.close(); // ferme la WebView après scan
           }
         });
-      } catch (err) {
-        console.error(err);
-        resultElement.textContent = "Erreur accès caméra";
+      } catch (e) {
+        console.error(e);
+        alert("Erreur d'accès caméra : " + e.message);
       }
+    }
+
+    function decodeTicket(barcode) {
+      // Exemple "010002530000"
+      let partieB = barcode.match(/<([0-9]{12})</);
+      if (!partieB) return { montant: "?", emetteur: "?" };
+
+      let data = partieB[1];
+      let montant = parseInt(data.substring(0, 4)) / 100;
+      let codeEmetteur = data.substring(4, 6);
+
+      let table = {
+        "25": "Edenred",
+        "15": "UpDéjeuner",
+        "45": "Pluxee"
+      };
+
+      return {
+        montant: montant.toFixed(2),
+        emetteur: table[codeEmetteur] || "Inconnu (" + codeEmetteur + ")"
+      };
     }
 
     startScanner();
