--- a/scan.html
+++ b/scan.html
@@ -13,6 +13,7 @@
       justify-content: center;
       align-items: center;
       background: #000;
+      overflow: hidden;
     }
     #video {
       width: 100%;
@@ -22,16 +23,17 @@
     #frame {
       position: absolute;
       border: 3px solid red;
-      width: 60%;
-      height: 20%;
-      top: 40%;
-      left: 20%;
+      width: 80%;   /* élargi */
+      height: 35%;  /* plus haut */
+      top: 32.5%;   /* centré verticalement */
+      left: 10%;    /* centré horizontalement */
       box-sizing: border-box;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-  <video id="video" autoplay></video>
+  <video id="video" autoplay playsinline></video>
   <div id="frame"></div>
   <audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
 
@@ -58,7 +60,7 @@
             const raw = result.getText();
             const info = decodeTicket(raw);
 
-            alert(`Émetteur: ${info.emetteur}\nMontant: ${info.montant} €`);
+            alert(`✅ Ticket détecté !\n\nÉmetteur: ${info.emetteur}\nMontant: ${info.montant} €\nCode brut: ${raw}`);
 
             stream.getTracks().forEach(track => track.stop());
             window.close(); // ferme la WebView après scan
@@ -72,7 +74,7 @@
 
     function decodeTicket(barcode) {
       // Exemple "010002530000"
-      let partieB = barcode.match(/<([0-9]{12})</);
+      let partieB = barcode.match(/(\d{12,})/);
       if (!partieB) return { montant: "?", emetteur: "?" };
 
       let data = partieB[1];
@@ -86,7 +88,7 @@
       };
 
       return {
-        montant: montant.toFixed(2),
+        montant: isNaN(montant) ? "?" : montant.toFixed(2),
         emetteur: table[codeEmetteur] || "Inconnu (" + codeEmetteur + ")"
       };
     }
