--- a/scan.html
+++ b/scan.html
@@ -23,12 +23,12 @@
     #frame {
       position: absolute;
       border: 3px solid red;
-      width: 80%;   /* large */
-      height: 25%;  /* plus bas qu'avant */
-      top: 37.5%;   /* pour rester centré verticalement */
-      left: 10%;    /* centré horizontalement */
-      box-sizing: border-box;
+      width: 80%;
+      height: 25%;
+      top: 37.5%;
+      left: 10%;
       border-radius: 10px;
+      box-sizing: border-box;
     }
   </style>
 </head>
@@ -38,20 +38,29 @@
   <audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
 
   <script>
-    const codeReader = new ZXing.BrowserMultiFormatReader();
     const video = document.getElementById('video');
     const beep = document.getElementById('beep');
 
     async function startScanner() {
       try {
+        const codeReader = new ZXing.BrowserBarcodeReader();
+
+        // Forcer la caméra arrière
         const constraints = {
           video: {
-            facingMode: { exact: "environment" } // force caméra arrière
+            facingMode: { exact: "environment" }
           }
         };
 
         const stream = await navigator.mediaDevices.getUserMedia(constraints);
         video.srcObject = stream;
+
+        // Limiter aux formats Code128 + ITF pour tickets resto
+        const hints = new Map();
+        hints.set(ZXing.DecodeHintType.POSSIBLE_FORMATS, [
+          ZXing.BarcodeFormat.CODE_128,
+          ZXing.BarcodeFormat.ITF
+        ]);
 
         codeReader.decodeFromVideoDevice(null, 'video', (result, err) => {
           if (result) {
@@ -63,12 +72,13 @@
             alert(`✅ Ticket détecté !\n\nÉmetteur: ${info.emetteur}\nMontant: ${info.montant} €\nCode brut: ${raw}`);
 
             stream.getTracks().forEach(track => track.stop());
-            window.close(); // ferme la WebView après scan
+            window.close();
           }
-        });
+        }, hints);
+
       } catch (e) {
         console.error(e);
-        alert("Erreur d'accès caméra : " + e.message);
+        alert("Erreur caméra : " + e.message);
       }
     }
 
