--- a/scan.html
+++ b/scan.html
@@ -39,6 +39,7 @@
     }
     
     /* Écran de chargement */
+     /* Écran de chargement */
     #splash-screen {
       position: fixed;
       top: 0;
